--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,8 +4,8 @@ spring.datasource.password = root
 
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
