--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,23 +1,24 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/dsvendas?useTimezone=true&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = root
-
-spring.jpa.hibernate.ddl-auto = none
-spring.jpa.show-sql=true
+#spring.datasource.url = jdbc:mysql://localhost:3306/dsvendas?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username = root
+#spring.datasource.password = root
+#
+#spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
-
-
-####### Descomentar aqui ############3
-#spring.datasource.url=jdbc:postgresql://localhost:5432/dsvendas
-#spring.datasource.username=postgres
-#spring.datasource.password=1234567
-#
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+
+
+####### Descomentar aqui ############3pg_hba
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dsvendas
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5434/dsvendas
+spring.datasource.username=postgres
+spring.datasource.password=1234567
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=none
